# meteo-types

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
bindings/bindings/: AccuracyWindow.ts  AirQualityPayload.ts  DataQualityBand.ts  DataQualityScore.ts  EnvironmentalDomain.ts  EnvironmentalReport.ts  GeoLocation.ts  HydrologyPayload.ts  OceanPayload.ts  PhysicsRangePolicy.ts  PhysicsViolation.ts  ProvenanceChain.ts  ProvenanceEntry.ts  ReportPayload.ts  SensorAccuracyBand.ts  SensorAccuracyMetrics.ts  SensorReferencePair.ts  SoilPayload.ts  ValidationReading.ts  WaterQualityPayload.ts  WeatherObservation.ts  WildfirePayload.ts
src/: domain.rs  geo.rs  iot_accuracy.rs  lib.rs  observation.rs  quality.rs  validation.rs
