[package]
name = "meteo-types"
version = "0.1.0"
edition = "2021"
description = "Canonical Rust types for meteorological and environmental observation data"
license = "MIT OR Apache-2.0"
keywords = ["weather", "meteorology", "climate", "environmental", "observation"]
categories = ["data-structures", "science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
