[package]
name = "meteo-types"
version = "0.1.0"
edition = "2021"
description = "Canonical Rust types for meteorological and environmental observation data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wrfcoin/meteo-types"
keywords = ["weather", "meteorology", "climate", "environmental", "observation"]
categories = ["data-structures", "science"]

[features]
default = []
ts = ["dep:ts-rs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ts-rs = { version = "10", optional = true, features = ["serde-compat"] }

[dev-dependencies]
serde_json = "1.0"
